# DynamicSimulationDemo

./: README.md  bar_crane.py  bar_crane_game.py  bar_crane_plant.py  boat_top_down_game.py  boat_top_down_plant.py  bouncing_ball.py  data_plotter.py  flipper.py  game_controller.py  inverted_pendulum_game.py  inverted_pendulum_model.py  inverted_pendulum_plant.py  math_helpers.py  physical_objects.py  plant_base.py  pyproject.toml  slider_example.py  smoketest_vector_field.py  state_space_control_calculations.py  submarine.py  submarine_instable.py  torque_example.py  vector_field.py
presentation/: .gitignore  export.py  main.typ  notes.md  presentation.typ  sources.bib
presentation/images/CyberneticsSearch/: sources.txt
