[project]
name = "dynamic-simulation-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "control>=0.10.2",
    "debugpy>=1.8.17",
    "pygame>=2.6.1",
    "pygame-widgets>=1.2.3",
    "pymunk>=7.1.0",
    "pytest>=9.0.0",
]
